fixed font size on small screens

--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -521,6 +521,8 @@ body
 						justify-content: space-around;
 						flex-flow: row wrap;
 						list-style: none;
+						margin: 0;
+						padding: 0;
 						li 
 							a
 								text-decoration: none;
@@ -1066,6 +1068,13 @@ body
 					.marketing_pictures
 						img
 							width: 300px;
+		section
+			.portfolio
+				.container
+					.portfolio_content
+						.portfolio_content_nav
+							ul
+								font-size: 12px;
 		section
 			.quote
 				.quote_content
